# FinalProject_COP3530

./: .gitignore  CMakeLists.txt  Project3_Presentation.pptx  README.md  algorithm.h  main.cpp
include/: algorithm.h  constants.h  graphwidget.h  mainwindow.h
src/: algorithm.cpp  benchmark.cpp  graphwidget.cpp  mainwindow.cpp
ui/: mainwindow.ui
